--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,10 @@
 body {
-    background-color: lightblue;
+    background-color: rgb(61, 161, 194);
   }
-  
+  head{
+    align-items: baseline;
+    position: relative;
+  }
   h1 {
     color: white;
     text-align: center;
@@ -13,4 +16,41 @@ body {
   }
   .products{
     font-family: Arial;
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%
+    
   }
+.product{
+  background-color: rgb(117, 191, 218);
+  background-blend-mode: darken;
+  padding: 20%;
+  width: 50%;
+
+  float: left;
+  position: relative;
+  
+
+  justify-self: center;
+  align-self: center;
+  text-align: center;
+}
+  .logo:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  }
+  .button{
+    float: right;
+    align-items: flex-end;
+    background-color: #f4511e;
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    font-size: 16px;
+    margin: 4px 2px;
+    opacity: 0.6;
+    transition: 0.3s;
+    display: inline-block;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  .button:hover {opacity: 1}
