--- a/static/style.css
+++ b/static/style.css
@@ -1,56 +1,77 @@
-body {
-    background-color: rgb(61, 161, 194);
+  
+  body {
+    background-color: rgb(255, 255, 255);
   }
-  head{
-    align-items: baseline;
-    position: relative;
-  }
+  
   h1 {
-    color: white;
+    color: rgb(0, 0, 0);
     text-align: center;
+    font-family: 'Lobster', cursive;
   }
   
   p {
     font-family: verdana;
     font-size: 20px;
   }
+
+  img {
+    width: 100%;
+    height: auto;
+    vertical-align: middle;
+  }
+  
+  
+  .header{
+    background-image: linear-gradient(to right, rgba(0, 132, 255, 0.863), white);
+  }
   .products{
+    box-sizing: border-box;
+    display: flex;
     font-family: Arial;
     display: grid;
     grid-template-columns: 25% 25% 25% 25%
     
   }
-.product{
-  background-color: rgb(117, 191, 218);
-  background-blend-mode: darken;
-  padding: 20%;
-  width: 50%;
+  .product{
+    background-color: rgba(0, 0, 0, 0.075);
+    background-blend-mode: darken;
+    padding: 5%;
+    width: 70%;
 
-  float: left;
-  position: relative;
-  
+    float: left;
+    position: relative;
+    
 
-  justify-self: center;
-  align-self: center;
-  text-align: center;
-}
-  .logo:hover {
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+    justify-self: center;
+    align-self: center;
+    text-align: center;
   }
+
   .button{
     float: right;
     align-items: flex-end;
-    background-color: #f4511e;
+    background-color: #0a69f8;
     border: none;
     color: white;
     padding: 16px 32px;
     text-align: center;
     font-size: 16px;
-    margin: 4px 2px;
+    margin-top: 4%;
+    margin-right: 1%;
     opacity: 0.6;
     transition: 0.3s;
     display: inline-block;
     text-decoration: none;
     cursor: pointer;
   }
+
+  .logo{
+    width:100px;
+    height:100px;
+    margin: 1%;
+  }
+
   .button:hover {opacity: 1}
+  .logo:hover {box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19); }
+  .product:hover{box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);}
+  img:hover {box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);}
