--- a/static/style.css
+++ b/static/style.css
@@ -9,6 +9,12 @@ body, html, #background {
   background-color:  rgba(255, 255, 255, 0);
 }
 
+.logo{
+  width:100px;
+  height:100px;
+  margin: 1%;
+}
+
 h1 {
   font-size: 12vh;
   color: rgb(172, 68, 154);
@@ -19,14 +25,19 @@ h1 {
 .items{
   display: flex;
   justify-content: space-around;
-  font-family: 'ink free';
-  font-size: 3vh;
+  /*font-family: 'ink free';
+  font-size: 3vh;*/
   z-index: 1;
+  flex-wrap: wrap;
+  margin: 100px;
 }
+
 .item{
   width: 300px;
-  background-color: rgba(0, 0, 0, 0.075);
+  height: 370px;
+  margin-bottom: 15px;
   padding: 5%;
+  background-color: rgba(0, 0, 0, 0.075);
   color: rgba(255, 255, 255, 0.329);
   text-align: center;
 
@@ -35,8 +46,12 @@ h1 {
 .item img{
   width: 300px;
   height: 300px;
-  height: auto;
+  padding: 2%;
   vertical-align: middle;
+}
+
+.item__price{
+  font-weight: bold;
 }
 
 .itemContainer{
@@ -51,7 +66,7 @@ h1 {
   padding-right: 20px;
 }
 
-.button{
+.header__buttons{
   float: right;
   align-items: flex-end;
   background-color: #0a69f8;
@@ -66,12 +81,6 @@ h1 {
   transition: 0.3s;
   text-decoration: none;
   cursor: pointer;
-}
-
-.logo{
-  width:100px;
-  height:100px;
-  margin: 1%;
 }
 
 .glow{
