--- a/static/style.css
+++ b/static/style.css
@@ -9,6 +9,12 @@ body, html, #background {
   background-color:  rgba(255, 255, 255, 0);
 }
 
+.category-wrapper{
+  float: right;
+  padding-right: 100px;
+  font-family: 'Courier New', Courier, monospace;
+  color: white;
+}
 .logo{
   width:100px;
   height:100px;
