--- a/public/style.css
+++ b/public/style.css
@@ -67,9 +67,10 @@ h1 {
   padding: 2%;
   color: rgba(255, 255, 255, 0.329);
   z-index: 3;
+  height: 50vh;
 }
 .itemContainer .item__image{
-  width: 500px;
+  width: 20vw;
   float: left;
   padding-right: 20px;
 }
