--- a/src/sortDropdown.css
+++ b/src/sortDropdown.css
@@ -1,216 +1,108 @@
-/* Design tiré du site flatuicolors.com */
+  /** Custom Select **/
+    .custom-select-wrapper {
+        
+        position: relative;
+        display: inline-block;
+        user-select: none;
+    }
 
-/* Réinitialisation */
-
-*{
-    margin: 0; padding: 0;
-    box-sizing:         border-box;
-    -moz-box-sizing:    border-box;
-    -webkit-box-sizing: border-box;
-}
-
-body{font-family: 'Open Sans';}
-a{color: #000; text-decoration: none;}
-/* img{max-width: 100%;}
-img a{border: none;} */
-ul{list-style-type: none;}
-
-/* Fin Réinitialisation */
-
-/* Démo */
-/* 
-body{
-    
-    padding-bottom: 30px;
-}
-
-.demo{
-    width: 600px;
-    margin: 100px auto 0 auto;
-}
-
-.demo h2{
-    font-weight: 300;
-    color: #444;
-    font-size: 1.4em;
-    border-bottom: 1px solid #444;
-    padding-bottom: 5px;
-    margin-bottom: 20px;
-    letter-spacing: 1px;
-}
-
-.demo p{
-    font-weight: 300;
-    color: #444;
-    font-size: 0.9em;
-    line-height: 25px;
-    margin-bottom: 40px;
-    text-align: justify;
-}
-
-.demo span{
-    display: block;
-    font-weight: 300;
-    font-style: italic;
-    font-size: 0.75em;
-    text-align: center;
-    color: #6a6a6a
-}
-
-.demo span a{
-   color: #6a6a6a 
-}
-
-.demo span a:hover{
-   text-decoration: underline;
-} */
-
-/* Old-Select */
-
-.old-select{
-    position: absolute;
-    top: -9999px;
-    left: -9999px;
-}
-
-/* New-Select */
-
-.new-select{
-    width: 300px;
-    height: 50px;
-    margin: auto;
-    
-    margin-top: 50px;
-    text-align: center;
-    color: #444;
-    line-height: 50px;
-    position: relative;
-}
-
-.new-select .selection:active{
-    transform:         rotateX(42deg);
-    -o-transform:      rotateX(42deg);
-    -ms-transform:     rotateX(42deg);
-    -moz-transform:    rotateX(42deg);
-    -webkit-transform: rotateX(42deg);
-    transform-style:         preserve-3d;
-    -o-transform-style:      preserve-3d;
-    -ms-transform-style:     preserve-3d;
-    -moz-transform-style:    preserve-3d;
-    -webkit-transform-style: preserve-3d;
-    transform-origin:         top;
-    -o-transform-origin:      top;
-    -ms-transform-origin:     top;
-    -moz-transform-origin:    top;
-    -webkit-transform-origin: top;
-    transition:         transform         200ms ease-in-out;
-    -o-transition:      -o-transform      200ms ease-in-out;
-    -ms-transition:     -ms-transform     200ms ease-in-out;
-    -moz-transition:    -moz-transform    200ms ease-in-out;
-    -webkit-transition: -webkit-transform 200ms ease-in-out;
-}
-
-.new-select .selection{
-    width: 100%;
-    height: 100%;
-    background-color: #fff;
-    box-shadow: 0 1px 1px rgba(0,0,0,0.1);
-    
-    cursor: pointer;
-    position: relative;
-    z-index: 20; /* Doit être supérieur au nombre d'option */
-    
-    transform:         rotateX(0deg);
-    -o-transform:      rotateX(0deg);
-    -ms-transform:     rotateX(0deg);
-    -moz-transform:    rotateX(0deg);
-    -webkit-transform: rotateX(0deg);
-    transform-style:         preserve-3d;
-    -o-transform-style:      preserve-3d;
-    -ms-transform-style:     preserve-3d;
-    -moz-transform-style:    preserve-3d;
-    -webkit-transform-style: preserve-3d;
-    transform-origin:         top;
-    -o-transform-origin:      top;
-    -ms-transform-origin:     top;
-    -moz-transform-origin:    top;
-    -webkit-transform-origin: top;
-    transition:         transform         200ms ease-in-out;
-    -o-transition:      -o-transform      200ms ease-in-out;
-    -ms-transition:     -ms-transform     200ms ease-in-out;
-    -moz-transition:    -moz-transform    200ms ease-in-out;
-    -webkit-transition: -webkit-transform 200ms ease-in-out;
-}
-
-.new-select .selection p{
-    width: calc(100% - 60px);
-    position: relative;
-    
-    transition:         all 200ms ease-in-out;
-    -o-transition:      all 200ms ease-in-out;
-    -ms-transition:     all 200ms ease-in-out;
-    -moz-transition:    all 200ms ease-in-out;
-    -webkit-transition: all 200ms ease-in-out;
-}
-
-.new-select .selection:hover p, .new-select .selection.open p{
-    color: #bdc3c7;
-}
-
-.new-select .selection i{
-    display: block;
-    width: 1px;
-    height: 70%;
-    position: absolute;
-    right: -1px; top: 15%; bottom: 15%;
-    border: none;
-    background-color: #bbb;
-}
-
-.new-select .selection > span{
-    display: block;
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 14px 8px 0 8px; /* Height: 14px / Width: 16px */
-    border-color: #bbb transparent transparent transparent;
-    
-    position: absolute;
-    top: 18px; /* 50 / 2 - 14 / 2 */
-    right: 22px; /* 60 / 2 - 16 / 2 */
-}
-
-.new-select .selection.open > span{
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 0 8px 14px 8px;
-    border-color: transparent transparent #bbb transparent;
-}
-
-.new-option{
-    text-align: center;
-    background-color: #fff;
-    cursor: pointer;
-    box-shadow: 0 1px 1px rgba(0,0,0,0.1);
-    position: relative;
-    margin-top: 1px;
-    
-    position: absolute;
-    left: 0; right: 0;
-    
-    transition:         all 300ms ease-in-out;
-    -o-transition:      all 300ms ease-in-out;
-    -ms-transition:     all 300ms ease-in-out;
-    -moz-transition:    all 300ms ease-in-out;
-    -webkit-transition: all 300ms ease-in-out;
-}
-
-.new-option p{
-    width: calc(100% - 60px);
-}
-
-/* .new-option.reveal:hover{
-    background-color: #444;
-    color: #f5f5f5;
-} */
+    .custom-select-wrapper select {
+      display: none;
+    }
+    .custom-select {
+      position: relative;
+      display: inline-block;
+    }
+      .custom-select-trigger {
+        position: relative;
+        display: block;
+        width: 130px;
+        padding: 0 84px 0 22px;
+        font-size: 18px;
+        font-weight: 300;
+        color: #fff;
+        line-height: 60px;
+        background: #5c9cd8;
+        border-radius: 4px;
+        cursor: pointer;
+      }
+        .custom-select-trigger:after {
+          position: absolute;
+          display: block;
+          content: '';
+          width: 10px; height: 10px;
+          top: 50%; right: 25px;
+          margin-top: -3px;
+          border-bottom: 1px solid #fff;
+          border-right: 1px solid #fff;
+          transform: rotate(45deg) translateY(-50%);
+          transition: all .4s ease-in-out;
+          transform-origin: 50% 0;
+        }
+        .custom-select.opened .custom-select-trigger:after {
+          margin-top: 3px;
+          transform: rotate(-135deg) translateY(-50%);
+        }
+    .custom-options {
+      position: absolute;
+      display: block;
+      top: 100%; left: 0; right: 0;
+      min-width: 100%;
+      margin: 15px 0;
+      border: 1px solid #b5b5b5;
+      border-radius: 4px;
+      box-sizing: border-box;
+      box-shadow: 0 2px 1px rgba(0,0,0,.07);
+      background: #fff;
+      transition: all .4s ease-in-out;
+      
+      opacity: 0;
+      visibility: hidden;
+      pointer-events: none;
+      transform: translateY(-15px);
+    }
+    .custom-select.opened .custom-options {
+      opacity: 1;
+      visibility: visible;
+      pointer-events: all;
+      transform: translateY(0);
+    }
+      .custom-options:before {
+        position: absolute;
+        display: block;
+        content: '';
+        bottom: 100%; right: 25px;
+        width: 7px; height: 7px;
+        margin-bottom: -4px;
+        border-top: 1px solid #b5b5b5;
+        border-left: 1px solid #b5b5b5;
+        background: #fff;
+        transform: rotate(45deg);
+        transition: all .4s ease-in-out;
+      }
+      .option-hover:before {
+        background: #f9f9f9;
+      }
+      .custom-option {
+        position: relative;
+        display: block;
+        padding: 0 22px;
+        border-bottom: 1px solid #b5b5b5;
+        font-size: 18px;
+        font-weight: 600;
+        color: #b5b5b5;
+        line-height: 47px;
+        cursor: pointer;
+        transition: all .4s ease-in-out;
+      }
+      .custom-option:first-of-type {
+        border-radius: 4px 4px 0 0;
+      }
+      .custom-option:last-of-type {
+        border-bottom: 0;
+        border-radius: 0 0 4px 4px;
+      }
+      .custom-option:hover,
+      .custom-option.selection {
+        background: #f9f9f9;
+      }
