--- a/src/components/header.css
+++ b/src/components/header.css
@@ -75,6 +75,16 @@
     text-decoration: none;
     cursor: pointer;
   } */
+  
+  .badge {
+    position: absolute;
+    padding: 2px 6px;
+    background: #d41d46;
+    bottom: 21px;
+    color: white;
+    border-radius: 100%;
+    font-size: 10px;
+} 
 
   .header__buttons {
     display: flex;
