--- a/public/style.css
+++ b/public/style.css
@@ -104,6 +104,22 @@ h1 {
   transition: all .2s;
 }
 
+.display-flex-between {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.field {
+  padding: 5px 15px;
+  border: 1px solid #0000002e;
+  background: #80808017;
+  border-radius: 5px;
+  display: flex;
+  font-size: 14px;
+  align-items: center;
+} 
+
 .buttons:hover {opacity: 1}
 .instagram:hover {opacity: 1}
 .logo:hover {box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19); }
