--- a/src/components/fancybutton.css
+++ b/src/components/fancybutton.css
@@ -1,18 +1,17 @@
 .btn.btn--fancy{
-    background: #d41d46;
+    background: rgba(153, 19, 153, 0.562);
     font-size: large;
     text-transform: uppercase;
     color: white;
     font-weight: bold;
     padding: 10px 20px;
     border: 0;
-    display: inline-block;
-    align-items: center;
+    top: 400px
   }
   
   .btn--fancy:hover {
     cursor: pointer;
-    background: #f36987;
+    background: rgba(179, 23, 179, 0.541);
   }
 
   .btn-inner {
