--- a/src/pages/cartPage.css
+++ b/src/pages/cartPage.css
@@ -2,20 +2,29 @@
     width: 90%;
     margin: 0 auto;
     border: 1px;
-    background-color: white;
 }
-
+.cell{
+    justify-content: center;
+    display: flex;
+    text-align: center;
+}
 img {
-    width: 100%;
-    max-width: 300px;
+    width: 300px;
+    height: 300px;
     height: auto;
 }
 
 /* https://www.w3schools.com/cssref/sel_nth-child.asp */
 .row {
     display: grid;
-    grid-template-columns: repeat(4, 24%) 10%;
+    grid-template-columns: 20% repeat(3, 25%) 5%;
 }
+
+.cart{
+    background-color: rgba(255, 255, 255, 0.137);
+}
+
+
 
 
 
