--- a/src/pages/homepage.css
+++ b/src/pages/homepage.css
@@ -1,7 +1,14 @@
+.filters-wrapper{
+    justify-content: center;
+    display: flex;
+    align-items: center;
+}
 .itemFilters-wrapper{
     top: 200px; /* required */
     margin: 0 auto;
-    margin-left: 25px;
+    justify-content: left;
+    display: flex;
+    margin-left: 130px;
 }
 
 .itemFilters-wrapper > div{
@@ -10,4 +17,12 @@
 
 .items-found{
     color: white;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 15px;
+    text-align: left;
+}
+
+.dropdown{
+    margin-left: 30px;
+    margin-right: 100px;
 }
